--- a/dashboard-gameStack/src/views/dashboardAdmin/LoadVideogame/LoadVIdeogame.module.css
+++ b/dashboard-gameStack/src/views/dashboardAdmin/LoadVideogame/LoadVIdeogame.module.css
@@ -1,118 +1,132 @@
 .container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 70%;
-  height: 100%;
+  height: 35rem;
   align-items: center; /* Centra verticalmente el contenido */
   justify-content: center; /* Centra horizontalmente el contenido */
   color: white;
-  margin-top: -570px;
+  margin-top: -590px;
   margin-left: 50%; /* Ajusta la cantidad de margen izquierdo para desplazar el componente hacia la derecha */
   transform: translateX(-32%);
-   /* Centra el componente horizontalmente después de aplicar el margen izquierdo */
-  /* border: solid 1px white; */
-  }
+  background: linear-gradient(to right, #1b063e, #622eda);
+  border: 1px solid #622eda;
+  border-radius: 10px;
 
-  .formContainer {
-    background-color: #f0eaea;
-    border-radius: 10px;
-    padding: 20px; /* Puedes ajustar el valor del padding según tus preferencias */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Agrega sombra para realzar el efecto del recuadro */
-    /* Asegúrate de que la propiedad de tamaño se ajuste automáticamente al contenido */
-    display: inline-block;
-    width: 96%;
-  }
+}
 
 /* Encabezado */
 .container h1 {
   text-align: center;
-  color: black;
+  color:#622eda;
   font-size: 25px;
-  font-weight: bold;
   margin-bottom: 20px;
 }
 
 .container h2 {
-  text-align: center;
-  color: black;
+  text-align: left;
+  color:#987bdc;
   font-size: 16px;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.2rem;
 }
 
+.title {
+  font-size: 10px;
+}
 
-.datepickerinput  {
-  width: 100%;
-  height: 40px;
-  padding: 8px;
-  font-size: 16px;
-  border: 2px solid #ccc;
-  border-radius: 4px;
+.inputs {
+  display: flex;
+  justify-content: center;
+  width: 60%;
   background-color: #fafafa;
-  background-image: url('/path/to/calendar-icon.png'); /* Agrega la ruta correcta de la imagen del calendario */
-  background-position: right 10px center;
-  background-repeat: no-repeat;
-  box-sizing: border-box;
+  height: 35rem;
+  border-radius: 10px;
+  color: #1b063e;
 }
-/* Campos de formulario */
+
+.subContenedorInputs{
+  width: 80%;
+}
+
+.inputsContainer1 {
+  display: flex;
+ 
+}
+
+.input1 {
+  width: 100%;
+
+  border-radius: 5px;
+
+  
+}
+.inputSmall {
+  display: flex;
+  justify-content:flex-start;
+  align-items: flex-start;
+  margin: 0.2rem;
+  width: 10rem;
+  height: 2rem;
+  text-align:center;
+}
 
 
-.form-group textarea {
-  resize: vertical;
-}
 
 .deleteImage {
+  font-size: 2rem;
   background-color: red;
-  position: absolute;
-  margin-left: 15rem;
-  z-index: 999;
-  margin-bottom: 15rem;
+  background-color: transparent;
+  margin-bottom: 1;
+  width: 1rem;
+  height: 1rem;
+  margin-top: rem;
+
+  
+}
+
+.generesAndPlatforms {
+  display: flex;
+  flex-direction: row;
+  margin-top: rem;
+
+}
+
+.genre {
+  width: 100%;
+
+}
+
+.select {
+  width: 15rem;
+  height: 2rem;
+  border-radius: 5px;
 }
 
 /* Botón de enviar y cancelar */
-/* .buttonLoadGame {
+.buttonLoadGame {
   background-color: #622eda;
+  color: #fafafa;
+  border:#1b063e;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-left: 10rem;
+}
+
+.buttonLoadGame hover {
+  background-color: red;
   color: #fafafa;
   border: none;
   border-radius: 0.2rem;
   padding: 10px 20px;
   cursor: pointer;
- margin-left: 6rem;
-} */
-
-.buttonLoadGame{
-  padding: 10px;
-  margin: 32;
-  height: 42;
-  width: 25%;
-  background-color: #6B35E8;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  margin-left: 10rem;
 }
 
-.buttonLoadGame:hover {
-  background-color: #0056b3;
-}
-
-/* .cancel {
-  background-color: transparent;
-  color:#622eda;
-} */
-
-/* Estilos para el botón "Cancelar" */
 .cancel {
-  background-color: #ff0000;
-  color: #ffffff; 
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  width: 25%;
-}
-
-
-.cancel:hover {
-  background-color: #ff3333;
+  background-color: transparent;
+  color: #622eda;
+  margin-left: 4rem;
 }
 
 /* Imagen seleccionada */
@@ -125,216 +139,191 @@
   padding: 10px;
   border-radius: 5px;
   text-align: center;
-  color:#622eda;
+  color: #622eda;
   text-align: center;
-  font-weight: bold !important;
+  font-weight: bold;
+  font-size: 0.8rem;
+  width: 100%;
 }
 
 .message.success {
   background-color: #570606;
-  color:#987bdc;
-  font-weight: bold ;
-  ;
+  color: #987bdc;
+  font-weight: bold;
+  width: 100%;
 }
 
 .errorMessage {
+  width: 100%;
   text-align: center;
   color: #987bdc;
+  font-size: 0.7rem;
 }
 
-
-.imageLoad {
+.containerTextArea {
+  display: flex;
   justify-content: center;
-  margin-top: 4rem;
   align-items: center;
-  width: 100%;
 }
+
+.textarea {
+  /* Estilos para la caja de texto (textarea) */
+  width: 15rem;
+  min-height: 8rem;
+  border: 1px solid #ccc;
+  overflow-y: auto;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+.buttonUpload {
+  margin-bottom: -5rem;
+}
+
 
 .imageLoaded {
-  margin-top: 2rem;
+  margin-top: -3rem;
   align-items: center;
   width: 100%;
 }
 
+.imageLoad {
+  height: 5rem;
+  margin-top: 2rem;
+}
+.imageLoad2 {
+  width: 80%;
+  margin-top: 8rem;
+  margin-left: 3rem;
+  margin-bottom: -5rem;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.imageLoad2 h2 {
+  text-align: center;
+  
+  font-size: 1rem;
+  color: #fafafa;
+  width: 100%;
+}
+
+.imageLoad h2 {
+  text-align: center;
+  margin-bottom: 4rem;
+  font-size: 1rem;
+  color: #fafafa;
+  margin-top: -5rem;
+
+  width: 100%;
+}
+
+.delete-button-container{
+  display: flex;
+  justify-content: center;
+
+}
+
+.delete-button{
+  width: 1rem;
+  height: 1rem;
+  color: #fafafa;
+  font-size: 100px;
+  position: absolute;
+  transform: translate(14rem, -450%);
+}
+
+.image-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.Carousel {
+  display: flex;
+  flex-direction: row;
+}
+
+.uploadImageIco {
+  font-size: 7rem;
+  color: #987bdc;
+  align-items: center;
+}
+
+.uploadImage {
+  font-size: 5rem;
+  color: #987bdc;
+  align-items: center;
+  width: 20%;
+}
+
+.updateImage {
+  width: 5rem;
+  height: 3rem;
+  margin-left: 5rem;
+}
+
+.uploadImage2 {
+  background-color: transparent;
+  z-index: 999;
+}
 
 .image-container:hover img {
   opacity: 0.5;
 }
 
 /* Estilo para mostrar el botón X en el hover */
-.image-container:hover .delete-button {
-  display: block;
-}
+
 
 /* Estilo para ocultar el botón X por defecto */
 .delete-button {
   display: none;
   position: absolute;
-  transform: translate(20rem,-450%);
-  background-color:transparent ;
-  color:grey;
+
+  transform: translate(14rem, -450%);
+  background-color: transparent;
+  color: #fafafa;
   padding: 5px;
   border: none;
   border-radius: 50%;
   cursor: pointer;
-  width: 10rem;
-  height:4.5rem;
-  font-size: 4rem;
+  width: 5rem;
+  height: 5rem;
+  font-size: 8rem;
 }
 
-.uploadImage{
-  font-size: 10rem;
-  color: #987bdc;
+.buttonContainer {
+  margin-top: 1rem;
   align-items: center;
-  width: 20%;
-
-}
-
-.container{
-  display: flex;
-  align-items: center;
+  justify-content: center;
   justify-content: center;
 }
 
-.buttonContainer{
+.loadimagesContainer {
+  text-align: center;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  width: 40%;
   justify-content: center;
-}
-.buttonContainer button {
-  margin-right: 5px; /* Margen derecho para el primer botón */
-}
-/* Estilos para los elementos <h2> */
-h2 {
-  font-size: 24px; /* Tamaño de fuente */
-  font-weight: bold; /* Grosor de la fuente */
-  color: #333333; /* Color del texto */
-  margin-bottom: 5px; /* Margen inferior */
+  /* margin-left: 13rem; */
 }
 
-h1 {
-  font-size: 24px; /* Tamaño de fuente */
-  font-weight: bold; /* Grosor de la fuente */
-  color: #333333; /* Color del texto */
-  margin-bottom: 10px; /* Margen inferior */  
-  border-bottom: 4px solid #ccc;
-}
-/* .input{
-margin-top: 1rem;
-width: 100% !important;
-
-} */
-
-
-.textarea{
-border-radius: 10px;
-width: 100%;
-margin-bottom: 5px;
-resize: vertical;
-height: 50px;
-}
-
-
-.selectImage{
+.selectImage {
   width: 50%;
   color: #fafafa;
 }
 
-.selectImage button{
+.selectImage button {
   width: 100%;
   color: red;
   align-items: center;
   justify-content: center;
-  display:none;
+  display: none;
   border-radius: 10px;
 }
 
-._imageLoad_brvfo_205{
- padding: 10px;
- height: 100px;
-}
-
-.containerSelect{
+.containerSelect {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.select{
-  width: 50%;
-  height: 2rem;
-  margin: 0;
-}
-
-.imageLoad{
-  margin-top: -1rem;
-}
-
-.subFormContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 900px; /* Ajusta el ancho máximo según tus necesidades */
-  margin: 0 auto; /* Centra el contenedor horizontalmente */
-  border-bottom: 3px solid #ccc;
-  margin-bottom: 10PX;
-}
-
-.subFormContainer > div {
-  flex: 0 0 calc(20% - 20px); /* Divide el espacio en tres columnas y deja un espacio entre ellas */
-  margin-bottom: 10px;
-}
-
-.subFormContainer > div > h2 {
-  margin-bottom: -25px; /* Reduzca el margen inferior del título */
-}
-.input {
-  width: 90%;
-  padding: 10px;
-  margin-bottom: 115px; /* Reduzca el margen inferior del campo de entrada */
-  border: 1px solid #ccc;
-  border-radius: 2px;
-  text-align: center;
-  padding-left: 10px;
-}
-
-.inputGenrePlatform {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: -10px; /* Reduzca el margen inferior del campo de entrada */
-  /* border: 1px solid #ccc; */
-  /* border-radius: 2px; */
-  text-align: center;
-  padding-left: 10px;
-}
-.inputGenrePlatform > div {
-  margin-bottom: 5px; /* Reduzca el margen inferior del título */
-}
-
-.imagesLoad {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 900px; /* Ajusta el ancho máximo según tus necesidades */
-  margin: 0 auto;
-  border-bottom: 3px solid #ccc;
-}
-
-.imagesLoad > div {
-  flex: 0 0 calc(50% - 20px); /* Divide el espacio en tres columnas y deja un espacio entre ellas */
-  margin-bottom: 20px;
-}
-
-.descrReq{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  max-width: 900px; /* Ajusta el ancho máximo según tus necesidades */
-  margin: 0 auto;
-  margin-bottom: 10px;
-  border-bottom: 3px solid #ccc;
-}
-
-.descrReq > div {
-  flex: 0 0 calc(50% - 20px); /* Divide el espacio en tres columnas y deja un espacio entre ellas */
-  margin-bottom: 20px;
 }
